plugins {
	id 'java'
	id 'com.gradleup.shadow' version '8.+'
}

group = maven_group
base.archivesName = project.archives_base_name

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
	maven {
		url "https://moehreag.duckdns.org/maven/snapshots"
	}
	maven {
		url "https://moehreag.duckdns.org/maven/releases"
	}

	maven {
		name 'TerraformersMC Maven'
		url 'https://maven.terraformersmc.com/releases/'
	}

	mavenLocal()
	mavenCentral()
}

dependencies {
	implementation 'org.jetbrains:annotations:24.0.0'

	// take the oldest version just to build against
	testRuntimeOnly compileOnly("io.github.axolotlclient:AxolotlClient-config:${project.config}+${project.minecraft_18}") {
		transitive = false
	}
	testRuntimeOnly testCompileOnly(compileOnly("io.github.axolotlclient.AxolotlClient-config:AxolotlClientConfig-common:${project.config}"))

	testRuntimeOnly compileOnly("com.google.guava:guava:17.0")
	testImplementation compileOnly("org.apache.httpcomponents:httpclient:4.3.3")
	testImplementation compileOnly("com.google.code.gson:gson:2.2.4")
	testRuntimeOnly compileOnly("commons-io:commons-io:2.4")
	testRuntimeOnly compileOnly("org.apache.commons:commons-lang3:3.3.2")
	testRuntimeOnly compileOnly("org.lwjgl:lwjgl-glfw:3.3.2")

	shadow implementation("io.github.CDAGaming:DiscordIPC:0.6.5")
	shadow implementation("com.kohlschutter.junixsocket:junixsocket-core:2.8.3")

	shadow implementation("com.github.mizosoft.methanol:methanol:1.7.0")
}

build {
	dependsOn(shadowJar)
	tasks.jar.enabled = false
}

processResources {
	inputs.property 'version', version

	filesMatching('fabric.mod.json') {
		expand "version": version
	}
}

tasks.withType(AbstractArchiveTask).configureEach {
	preserveFileTimestamps = false
	reproducibleFileOrder = true
}

shadowJar {
	archiveClassifier.set('')
	mergeServiceFiles()
	minimize {
		exclude(dependency("com.github.mizosoft.methanol:.*:.*"))
	}

	relocate 'com.jagrosh', 'io.github.axolotlclient.shadow.jagrosh'
	relocate 'com.github.mizosoft', 'io.github.axolotlclient.shadow.mizosoft'

	exclude 'META-INF/versions/**'
	exclude 'META-INF/maven/**'

	append '../LICENSE'
}

publishing {
	publications {
		shadow(MavenPublication) { publication ->
			project.shadow.component(publication)
		}
	}
	repositories {
		maven {
			name = "owlMaven"
			def repository = project.version.toString().contains("beta") || project.version.toString().contains("alpha") ? "snapshots" : "releases"
			url = "https://moehreag.duckdns.org/maven/" + repository
			credentials(PasswordCredentials)
			authentication {
				basic(BasicAuthentication)
			}
		}
	}
}

tasks.modrinth.setEnabled(false)
